fix grids on mobile

--- a/css/grid.css
+++ b/css/grid.css
@@ -63,9 +63,6 @@ div .container {
 }
 
 @media only screen and (max-width: 1080px) {
-  .container {
-    grid-template-columns: 45vw 45vw;
-  }
 
   .container-single {
     grid-template-columns: 91vw;
